# project45

./: CMakeLists.txt  build.yaml  main.cpp
.github/workflows/: build.yml
github/workflows/: TextAnalyzer
